# FTCCL

./: .gitignore  DCU_MIDWARE_REWRITE_MIGRATION_PLAN.md  README copy.md  README.md  ftccl_midware_engineering_notes.md
custom-rccl-dtk-26.04/: CMakeLists.txt  README.md  README_FTCCL_DCU.md  toolchain-linux.cmake
custom-rccl-dtk-26.04/cmake/: Dependencies.cmake  rccl.conf.in
custom-rccl-dtk-26.04/docs/ftccl/: dcu_migration_report.md
custom-rccl-dtk-26.04/exp/survivor_collective_ring/: README.md  env.sh  hostfile
custom-rccl-dtk-26.04/exp/survivor_collective_ring/scripts/: run_bypass_16gpu.sh  run_bypass_16gpu_ccld.sh  run_bypass_matrix_16gpu_ccld.sh  run_ccld_16gpu.sh
custom-rccl-dtk-26.04/exp/survivor_collective_ring/src/: survivor_collective_after_kill.cpp
custom-rccl-dtk-26.04/googletest/: CMakeLists.txt
custom-rccl-dtk-26.04/googletest/googletest/: CMakeLists.txt
custom-rccl-dtk-26.04/src/: collectives.cc  debug.cc  duNcclConfig.cc  enqueue.cc  group.cc  init.cc  nccl.h.in  proxy.cc
custom-rccl-dtk-26.04/src/device/: all_reduce.h  common.h  onerank.cu  primitives.h  prims_simple.h  reduce_kernel.h  reduce_scatter.h  sendrecv.h
custom-rccl-dtk-26.04/src/graph/: connect.cc  paths.cc  rome_models.cc  rome_models.h  search.cc  topo.cc  topo.h  tuning.cc  xml.cc  xml.h
custom-rccl-dtk-26.04/src/include/: alloc.h  bitops.h  checks.h  collectives.h  comm.h  device.h  enqueue.h  gdrwrap.h  graph.h  ibvsymbols.h  ibvwrap.h  info.h  nccl_common.h  p2p.h  proxy.h  rccl_float8.h  rocm_smi_wrap.h  rocmwrap.h
custom-rccl-dtk-26.04/src/include/hipprof/: hip_prof_rccl.h  hip_prof_rccl_api.h  hip_prof_rccl_param.h  hip_prof_rccl_str.h  hip_profile_common.h
custom-rccl-dtk-26.04/src/misc/: hip_prof_rccl.cc  hip_prof_rccl_param.cc  ibvsymbols.cc  ibvwrap.cc  param.cc  rocm_smi_wrap.cc  rocmwrap.cc  socket.cc
custom-rccl-dtk-26.04/src/transport/: net.cc  net_ib.cc  p2p.cc
custom-rccl-dtk-26.04/test/: AllGatherTests.cpp  AllReduceTests.cpp  AllToAllTests.cpp  BroadcastTests.cpp  CMakeLists.txt  NonBlockingTests.cpp  PerformanceTests.cpp  ReduceScatterTests.cpp  ReduceTests.cpp  ScatterTests.cpp  SendRecvTests.cpp  StandaloneTests.cpp
custom-rccl-dtk-26.04/test/common/: CollectiveArgs.cpp  EnvVars.cpp  PtrUnion.cpp  PtrUnion.hpp  TestBed.cpp  TestBedChild.cpp
custom-rccl-dtk-26.04/tools/rccl-rdma-sharp-plugins-508-rccl-rdma-sharp-plugins-v8/: CMakeLists.txt  Makefile.am  README.md  configure.ac
custom-rccl-dtk-26.04/tools/rccl-rdma-sharp-plugins-508-rccl-rdma-sharp-plugins-v8/include/: core.h  nccl.h  net.h  p2p_plugin.h  param.h  ucx_uct_lib.h  utils.h
custom-rccl-dtk-26.04/tools/rccl-rdma-sharp-plugins-508-rccl-rdma-sharp-plugins-v8/src/: Makefile.am  ib_plugin.c  p2p_plugin.c  socket.c  ucx_plugin.c  ucx_rma_plugin.c  ucx_uct_lib.c  ucx_uct_plugin.c  ucx_uct_rd_plugin.c  utils.c
custom-rccl-dtk-26.04/tools/topo_expl/: topo_expl.cpp
ftccl_lib/docs/: survivor_collective_progress_summary.html
ftccl_lib/exp/survivor_collective_ring/runs/20260604T031034Z_ring_survivor_parent_native_collectives/: build_command.txt
ftccl_lib/exp/survivor_collective_ring/runs/20260604T031120Z_ring_survivor_parent_native_collectives/: build_command.txt  summary.tsv
ftccl_lib/exp/survivor_collective_ring/runs/20260604T031120Z_ring_survivor_parent_native_collectives/001_allreduce_kill0/: command.txt  result.md
ftccl_lib/exp/survivor_collective_ring/runs/20260604T031120Z_ring_survivor_parent_native_collectives/002_reducescatter_kill0/: command.txt  result.md
ftccl_lib/exp/survivor_collective_ring/runs/20260604T031120Z_ring_survivor_parent_native_collectives/003_allgather_kill0/: command.txt  result.md
ftccl_lib/exp/survivor_collective_ring/runs/20260604T031120Z_ring_survivor_parent_native_collectives/004_broadcast_kill0_root1/: command.txt  result.md
ftccl_lib/exp/survivor_collective_ring/scripts/: run_collective_matrix.sh
ftccl_lib/exp/survivor_collective_ring/src/: survivor_collective_after_kill.cu
ftccl_lib/makefiles/: common.mk
ftccl_lib/plugins/mixed/example/: plugin.c
ftccl_lib/plugins/profiler/example/: event.h  plugin.cc
ftccl_lib/plugins/profiler/inspector/: inspector_plugin.cc
ftccl_lib/plugins/tuner/example/: plugin.c
ftccl_lib/plugins/tuner/example/nccl/: tuner.h
ftccl_lib/src/: ce_coll.cc  enqueue.cc  init.cc  mnnvl.cc  nccl.h.in  proxy.cc
ftccl_lib/src/device/: prims_simple.h
ftccl_lib/src/device/symmetric/: generate.py
ftccl_lib/src/gin/: gin_host_proxy.cc
ftccl_lib/src/graph/: paths.cc
ftccl_lib/src/include/: comm.h  device.h  gdrwrap.h  sym_kernels.h
ftccl_lib/src/include/nccl_device/: gin.h
ftccl_lib/src/include/nccl_device/gin/: gin_device_common.h
ftccl_lib/src/include/nccl_device/gin/gdaki/: gin_gdaki.h
ftccl_lib/src/include/nccl_device/gin/proxy/: gin_proxy.h
ftccl_lib/src/include/nccl_device/impl/: gin__funcs.h
ftccl_lib/src/misc/: param.cc
ftccl_lib/src/os/: linux.cc
ftccl_lib/src/transport/: coll_net.cc  net.cc
ftccl_midware/: CMakeLists.txt  README.md
ftccl_midware/docs/: current_solution_brief.md  megatron_dp_rank_fault_tolerance_design.md
ftccl_midware/python/: sitecustomize.py
ftccl_midware/python/ftccl_megatron_patch/: __init__.py  installer.py  runtime.py  state.py
ftccl_midware/scripts/: megatron_env.sh  run_megatron_real_kill_demo.py  run_smoke.sh
ftccl_midware/src/: ftccl_midware.cu
ftccl_midware/tests/: ftccl_allreduce_smoke.cu
ftccl_midware_dcu/: CMakeLists.txt  README.md
ftccl_midware_dcu/docs/: current_technical_stack.md  dcu_migration_and_distributed_recovery_notes.md
ftccl_midware_dcu/python/: sitecustomize.py
ftccl_midware_dcu/python/ftccl_megatron_patch/: __init__.py  installer.py  patch_utils.py  runtime.py  state.py
ftccl_midware_dcu/scripts/: ftccl_bypassctl.py  megatron_env.sh  run_megatron_fault_tolerance_demo.sh  run_megatron_real_kill_demo.py  run_smoke.sh
ftccl_midware_dcu/src/: ftccl_midware.cpp
ftccl_midware_dcu/tests/: ftccl_allreduce_smoke.cpp
test/runs/bypass_16gpu_ccld/20260620T122128Z_ring_survivor_parent_native_collectives/: build_command.txt
(+91 files in other folders)
